dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewControlSwitch__c/PracticeEfficiencyReviewControlSwitch__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting to control automations on the Practice Efficiency Review V2 object</description>
    <label>PracticeEfficiencyReview Control Switch</label>
</CustomObject>