dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewControlSwitch__c/fields/RunAssignmentRules__c.field-meta.xml
<CustomField>
    <fullName>RunAssignmentRules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to control the execution of Practice Efficiency Review V2 assignment rules</description>
    <inlineHelpText>Checkbox to control the execution of Practice Efficiency Review V2 assignment rules</inlineHelpText>
    <label>Run Assignment Rules</label>
    <type>Checkbox</type>
</CustomField>