dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewControlSwitch__c/fields/RunProcessBuilder__c.field-meta.xml
<CustomField>
    <fullName>RunProcessBuilder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to control the execution of process builders on the Practice Efficiency Review V2  object</description>
    <inlineHelpText>Checkbox to control the execution of process builders on the Practice Efficiency Review V2  object</inlineHelpText>
    <label>Run Process Builder</label>
    <type>Checkbox</type>
</CustomField>