dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewControlSwitch__c/fields/RunTrigger__c.field-meta.xml
<CustomField>
    <fullName>RunTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox to control the execution of trigger on the Practice Efficiency Review V2 object</description>
    <inlineHelpText>Checkbox to control the execution of trigger on the Practice Efficiency Review V2 object</inlineHelpText>
    <label>Run Trigger</label>
    <type>Checkbox</type>
</CustomField>