dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewControlSwitch__c/fields/RunValidationRules__c.field-meta.xml
<CustomField>
    <fullName>RunValidationRules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to control the execution of validation rules on the Practice Efficiency Reviewer V2 object</description>
    <inlineHelpText>Checkbox to control the execution of validation rules on the Practice Efficiency Reviewer V2 object</inlineHelpText>
    <label>Run Validation Rules</label>
    <type>Checkbox</type>
</CustomField>